--- a/.github/workflows/feat_grouping-qna_chat-wa-i0klk.yml
+++ b/.github/workflows/feat_grouping-qna_chat-wa-i0klk.yml
@@ -21,11 +21,11 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, build, and test
+      - name: yarn install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          yarn install
+          yarn run build --if-present
+          yarn run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
