--- a/.github/workflows/feat_grouping-qna_chat-wa-i0klk.yml
+++ b/.github/workflows/feat_grouping-qna_chat-wa-i0klk.yml
@@ -24,8 +24,9 @@ jobs:
       - name: yarn install, build, and test
         run: |
           yarn install
-          yarn run build --if-present
-          yarn run test --if-present
+          yarn run build
+#          disable test for now
+#          yarn run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
